# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Includes dir
libgameincludedir = $(includedir)/

# Include files
include_HEADERS = 	window.h render.h image.h game.h text.h sdlsettings.h /
					log.h drawableobject.h rectangle.h pixel.h line.h circle.h /
					hexagon.h testLevelState.h gameestate.h gameobject.h /
					LoaderParams.h gamestatemachine.h keyboard_event.h/
					mouse_click.h mouse_event.h mouse_motion.h LoaderParams.h /
					testLevelState.h input_handler.h
