# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Includes dir
libgameincludedir = $(includedir)/

# Include files
include_HEADERS = 	window.h render.h image.h game.h text.h sdlsettings.h \
					log.h drawableobject.h rectangle.h pixel.h line.h circle.h \
					hexagon.h texturemanager.h menustate.h sdlgameobject.h \
					gameestate.h menustate.h gamestatemachine.h \
					menustate.h playstate.h vector2d.h menubutton.h inputhandler.h \
					pausestate.h gameoverstate.h soundmanager.h

