# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Includes dir
libgameincludedir = $(includedir)/

# Include files
include_HEADERS = 	window.h render.h image.h game.h text.h sdlsettings.h \
					log.h drawableobject.h rectangle.h pixel.h line.h circle.h \
					hexagon.h texturemanager.h menustate.h sdlgameobject.h \
					gameestate.h gamestatemachine.h \
					playstate.h vector2d.h menubutton.h inputhandler.h \
					pausestate.h gameoverstate.h soundmanager.h event.h \
					keyboardevent.h mouseclick.h mouseevent.h \
					mousemotion.h creditstate.h renderableobject.h \
					geometry.h torre.h bomba.h spy.h hexagonmap.h networkmanager.h \
					networkplayer.h networkstate.h base.h textarea.h textfield.h warn.h \
					parseArquivo.h condicaodevitoria.h fase01.h fase02.h fase03.h fase04.h fase05.h \
					fasestate.h configurationstate.h tutorialstate.h attractstate.h

