# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Resources
#warofthenetsdir = /opt/$(PACKAGE)/resources
warofthenetsdir = ./resources

dist_warofthenets_DATA = img/logo.png font/Army.ttf font/BarcodeFont.ttf font/Base_02.ttf \
							img/play.png img/exit.png img/fundo.png img/about.png \
							audio/Black_Vortex.ogg img/settingsbutton.png img/credits.png 
							



