# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Resources
warofthenetsdir = /opt/$(PACKAGE)/resources
#warofthenetsdir = ./resources

dist_warofthenets_DATA = img/logo.png font/Army.ttf font/BarcodeFont.ttf font/Base_02.ttf \
							img/play.png  \
							audio/Black_Vortex.ogg img/settingsbutton.png  \
							img/about.png img/back.png img/base.png img/base1.png img/base2.png \
							img/base3.png img/base4.png img/base5.png img/base6.png img/bomb.png \
							img/bomba.png img/botaoFimTurno.png img/botaolevel.png img/botaorecursobomba.png \
							img/botaorecursoespiao.png img/botaorecursotorre.png img/botaosair.png \
							img/button.png img/buttonupgrade.png img/cancelButton.png img/config.png \
							img/configbutton.png img/createroom_button.png img/credits.png img/down.png \
							img/enablesound.png img/exit.png img/fundo.jpg img/fundo.png img/fundo1.png \
							img/fundo2.png img/fundo3.png img/gamename.png img/gameover.png img/gameover2.png \
							img/hex_grama.png img/hexagonoazul.png img/hexagonovermelho.png img/history.png \
							img/hud_bg.png img/joinroom_button.png img/level1.png img/level2.png \
							img/level3.png img/level4.png img/level5.png img/loading.png img/logo.png img/menubutton.png \
							img/menututorial.png img/mit.png img/newgame.png img/next.png img/options.png \
							img/painelcronometro.png img/painelcronometro1.png img/painellinhadejogo.png img/painelrecurso.png \
							img/painelturno.png img/paionelinformacao.png img/play.png img/quittomenu.png img/sdl.png \
							img/settingsbutton.png img/spy.png img/textFieldShape.png img/title.png img/titulofase.png \
							img/tower.png img/tutorial.png img/tutorial1.png img/tutorial2.png img/tutorial3.png img/tutorial4.png \
							img/tutorial_button.png img/up.png img/warnok.png audio/Audio_Network_-_Dark_Surge.ogg \
							audio/Credits_George_Street_Shuffle.ogg audio/Five_Armies.ogg audio/GameOver_Ghost_Story.ogg \
							audio/Options_Day_of_Chaos.ogg audio/Stage1_Call_to_Adventure.ogg audio/Stage2_The_Descent.ogg \
							audio/Stage3_Tempting_Secrets.ogg audio/Stage4_The_Complex.ogg audio/Stage5_Hitman.ogg \
							audio/Stage5_Rising_Game.ogg audio/derrota.wav audio/explosion_large_debris-007.wav \
							audio/explosion_medium-003.wav audio/explosion_medium_close-005.wav audio/fx_stab-001.wav \
							audio/mechanical_metallic_rattle-001.wav audio/putSpy.wav audio/startTurn_-_Info_Arrive.wav \
							audio/vitoria.wav audio/mechanical_machine_lever_pull-001.wav audio/mechanical_metallic_rattle-002.wav \
							audio/mechanical_machine_scifi_pulse-001.wav font/Base_02.ttf font/monospaced.ttf img/camp.png \
							img/fase01.txt img/fase02.txt img/fase03.txt img/fase04.txt img/fase05.txt img/castscreen.png
