# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Library description
lib_LTLIBRARIES = 

# Programs excluded from instalation
#noinst_PROGRAMS = warofthenets
bin_PROGRAMS = warofthenets

# Library flags
#libgame_la_LDFLAGS = 

# Library sources
#libgame_la_SOURCES = 

# Libraries needed to build our library
#libgame_la_LIBADD = 

# Program description
warofthenets_SOURCES = main.cpp

# Libraries needed to build program
warofthenets_LDADD = game/libgame.la engine/libengine.la

# Include flags
INCLUDES = -I../include -g -W -Wall -pedantic -ansi -std=c++0x -Wno-long-long

