# Targets specification
#
# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Programs excluded from instalation
noinst_PROGRAMS = prog

# Program description
prog_SOURCES = test.cpp

# Libraries needed to build program
prog_LDADD = -lSDL2 -lSDL2_image -lSDL2_ttf

# Include flags
INCLUDES = -I. -Wall -W -pedantic -ansi -Wno-long-long

