# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Library description
lib_LTLIBRARIES = libmenus.la

# Programs excluded from instalation
#noinst_PROGRAMS = warofthenets
#bin_PROGRAMS = warofthenets

# Library flags
libmenus_la_LDFLAGS = -static

# Library sources
libmenus_la_SOURCES = 

# Libraries needed to build our library
libmenus_la_LIBADD = -lSDL2

# Program description
#warofthenets_SOURCES =

# Libraries needed to build program
#warofthenets_LDADD = 

# Include flags
INCLUDES = -I../../include -W -Wall -pedantic -ansi -Wno-long-long

