# Author: Edson Alves - edsonalves@unb.br
# Date: 26/11/2010

# Library description
lib_LTLIBRARIES = libgamelevels.la

# Programs excluded from instalation
#noinst_PROGRAMS = warofthenets
#bin_PROGRAMS = warofthenets

# Library flags
libgamelevels_la_LDFLAGS = -static

# Library sources
libgamelevels_la_SOURCES = 

# Libraries needed to build our library
libgamelevels_la_LIBADD = -lSDL2

# Program description
#warofthenets_SOURCES =

# Libraries needed to build program
#warofthenets_LDADD = 

# Include flags
INCLUDES = -I../../include -W -Wall -pedantic -ansi -Wno-long-long

